feat: add multimodal support with file picker and enhanced documentation
- Add multimodal image attachment support using '@' symbol in REPL mode
- Implement ParsedPrompt record for text + file path separation
- Add PromptParser with regex-based file path extraction and validation
- Create FilePathCompleter with JLine tab completion for image files
- Integrate Spring AI Media class for multimodal prompts in ChatService
- Support multiple image formats: jpg, jpeg, png, gif, webp, bmp
- Handle quoted and unquoted file paths, absolute and relative paths
- Add comprehensive test coverage for all multimodal components
- Update man page templates with multimodal and RAG documentation
- Enhance ChatCommand to use PromptParser for multimodal processing
- Update CliConfiguration to integrate FilePathCompleter with JLine

Features:
- Tab completion after '@' symbol for file selection
- File validation and error handling
- Multiple file attachments per prompt
- Seamless integration with existing chat functionality
- Enhanced documentation with usage examples

Tests: 129 tests passing, comprehensive multimodal test suite added

--- a/src/docs/man-templates/sc-config.adoc
+++ b/src/docs/man-templates/sc-config.adoc
@@ -9,6 +9,63 @@ include::{includedir}/sc-config.adoc[tag=picocli-generated-man-section-synopsis]
 
 include::{includedir}/sc-config.adoc[tag=picocli-generated-man-section-description]
 
+== Usage Examples
+
+=== Initialize Configuration
+Set up initial configuration with defaults:
+
+[source,bash]
+----
+sc config init
+----
+
+=== View Configuration
+Display current configuration values:
+
+[source,bash]
+----
+sc config --get provider
+sc config --get providers.ollama.model
+sc config --file
+----
+
+=== Set Configuration Values
+Configure Ollama settings:
+
+[source,bash]
+----
+sc config --set provider=ollama
+sc config --set providers.ollama.model=llama3.2
+sc config --set providers.ollama.base-url=http://localhost:11434
+----
+
+== Configuration File
+
+The configuration file is located at `$HOME/.sc/config` and uses a hierarchical key-value format:
+
+[source,yaml]
+----
+provider: ollama
+providers:
+  ollama:
+    base-url: http://localhost:11434
+    model: llama3.2
+chat-memory:
+  jdbc:
+    url: jdbc:hsqldb:mem:testdb
+----
+
+== Common Settings
+
+`provider`::
+  The AI provider to use (default: ollama)
+
+`providers.ollama.model`::
+  Default model for Ollama (e.g., llama3.2, codellama, mistral)
+
+`providers.ollama.base-url`::
+  Ollama server endpoint (default: http://localhost:11434)
+
 include::{includedir}/sc-config.adoc[tag=picocli-generated-man-section-options]
 
 include::{includedir}/sc-config.adoc[tag=picocli-generated-man-section-arguments]
@@ -16,5 +73,9 @@ include::{includedir}/sc-config.adoc[tag=picocli-generated-man-section-arguments
 include::{includedir}/sc-config.adoc[tag=picocli-generated-man-section-commands]
 
 include::{includedir}/sc-config.adoc[tag=picocli-generated-man-section-exit-status]
+
+== See Also
+
+*sc*(1), *sc-chat*(1), *sc-rag*(1)
 
 include::{includedir}/sc-config.adoc[tag=picocli-generated-man-section-footer]
