--- a/src/docs/man-templates/sc-chat.adoc
+++ b/src/docs/man-templates/sc-chat.adoc
@@ -23,6 +23,35 @@ I don't have access to current weather data, but I can help you with weather-rel
 sc> exit
 ----
 
+=== Multimodal Mode
+
+REPL mode supports multimodal prompts with image attachments using the `@` symbol:
+
+[source,bash]
+----
+sc chat
+sc> Describe this image @/path/to/image.png
+This image shows a beautiful landscape with mountains in the background...
+sc> Compare these screenshots @"screen 1.jpg" @'screen 2.png'
+Looking at both screenshots, I can see the following differences...
+sc> What's in this chart? @./data/chart.jpg
+The chart displays quarterly sales data showing...
+----
+
+==== Supported Image Formats
+- JPEG (`.jpg`, `.jpeg`)
+- PNG (`.png`) 
+- GIF (`.gif`)
+- WebP (`.webp`)
+- BMP (`.bmp`)
+
+==== File Path Features
+- **Tab completion**: Press Tab after `@` to browse and select files
+- **Absolute paths**: `@/full/path/to/image.jpg`
+- **Relative paths**: `@./images/photo.png` or `@../docs/diagram.jpg`
+- **Quoted paths**: `@"path with spaces.jpg"` or `@'another path.png'`
+- **Multiple files**: Attach multiple images in a single prompt
+
 === Single-shot Message Mode
 
 Provide a message as an argument for one-time questions:
@@ -71,6 +100,42 @@ In REPL mode, you can use these special commands:
 `/clear`::
   Clear the chat history
 
+== Multimodal Features
+
+=== File Attachment Syntax
+
+Use the `@` symbol to attach image files to your prompts:
+
+`@filename.jpg`::
+  Attach a single image file
+
+`@"path with spaces.png"`::
+  Use quotes for paths containing spaces
+
+`@./relative/path.gif`::
+  Relative paths from current directory
+
+`@/absolute/path/image.webp`::
+  Absolute file paths
+
+=== Tab Completion
+
+Press Tab after typing `@` to:
+
+- Browse the file system
+- Filter to show only supported image formats
+- Navigate directories with arrow keys
+- Select files with Enter
+
+=== File Validation
+
+The system automatically:
+
+- Validates file existence before sending
+- Checks for supported image formats
+- Resolves relative paths to absolute paths
+- Provides helpful error messages for invalid files
+
 include::{includedir}/sc-chat.adoc[tag=picocli-generated-man-section-options]
 
 include::{includedir}/sc-chat.adoc[tag=picocli-generated-man-section-arguments]
@@ -100,11 +165,30 @@ Use a specific model:
 sc chat -m codellama "Show me a Java hello world example"
 ----
 
+Analyze an image in REPL mode:
+
+[source,bash]
+----
+sc chat
+sc> What do you see in this image? @./screenshot.png
+sc> Compare these two charts @chart1.jpg @chart2.jpg
+----
+
 Connect to remote Ollama instance:
 
 [source,bash]
 ----
 sc --base-url http://192.168.1.100:11434 chat -m llama3.2
+----
+
+Use multimodal prompts with different image formats:
+
+[source,bash]
+----
+sc chat
+sc> Analyze this diagram @/home/user/docs/flowchart.png
+sc> What's the difference between @"image A.jpg" and @'image B.webp'?
+sc> Describe the contents of @../screenshots/ui.gif
 ----
 
 == Configuration
